--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "engines": {
+    "node": "19.8",
+    "npm": "9.5"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
