--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start": "react-scripts start"
+    "start": "vite preview"
   },
   "dependencies": {
     "@apollo/client": "^3.8.10",
@@ -39,6 +39,6 @@
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
-    "vite": "^5.0.8"
+    "vite": "^5.0.12"
   }
 }
