--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "engines": {
-    "node": "19.8",
+    "node": "18.0",
     "npm": "9.5"
   },
   "scripts": {
@@ -23,7 +23,8 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
     "react-router-dom": "^6.21.3",
-    "tw-merge": "^0.0.1-alpha.3"
+    "tw-merge": "^0.0.1-alpha.3",
+    "vite": "^5.0.12"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
