--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "engines": {
-    "node": "18.0"
+    "node": "18.0",
+    "npm": "9.5.1"
   },
   "scripts": {
     "dev": "vite",
